            - Ainda falta mostrar se é recorde ou não, mas aí precisa do max score do jogador

    Pedro(registration.cpp, testregistration.cpp, Makefile, doctest.h)
        - Inserção do arquivo de testes da classe "registration"
        - Mudança no makefile para compilar o teste de unidade
        - Inserção da biblioteca doctest.h no diretório "tests"

    Sam (game_loop, pipe_object)
        - Implementados os canos dourados

18-06-2025

    Sam (assets, home_screen):
        - Adicionados os sprites para os achievements
        - Iniciada a programação da home screen (nada pronto ainda)

    Sam (assets, home_screen, main):
        - Modificados alguns sprites de UI
        - Finalizada a home screen

19-06-2025

    Pedro(registration):
        (Atualizações por conta da nova funcionalidade de conquistas)
            - Criação de um vector booleano que armazena as conquistas do jogadores
            - Atualização dos métodos update, new_user para comportar as conquistas dos jogadores
            - Inserção de um novo método "get_player" que retorna as informações do player contida no objeto
        - Lançada exceção caso o arquivo não seja aberto por alguma razão

20-06-2025

    Matsura(src,include,Makefile)
        - Criação de classe para manipular o audio do menu
        - Adaptação dos novos métodos de registration para suportar os achievements
        - Comentários dos códigos do menu
    
    Pedro(testregistration.cpp):
        - Atualização dos testes de unidade do registro após modificações na classe

    Pedro(registration):
        - Alteração do modificador de acesso para private no atributo de senha
        - Correção de bugs relacionados ao multiset após modificações
        - Remoção do set_password que não faria sentido

21-06-2025

    Matsura(src,include,Makefile)
        - Adaptação da interface para mudanças na struct de jogador
        - Nova classe de menu geral para unificar o main e deixar mais limpo