@@ -40,8 +40,15 @@ TEST_CASE("testing if return of get_stats is correct"){
     //Adicionando Maria
     registro.new_user("Maria", "flappybird1", 15, 1);
     //Verifica se retorna a string com as informações dela quando a encontra
-    CHECK(registro.get_stats("Maria") == "15 Maria flappybird1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
-    CHECK(registro.get_stats("Carlos") == "24 Carlos flappybird 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Maria") == "15 Maria flappybird1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Carlos") == "24 Carlos flappybird 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+
+    //Adicionando Roberto
+    registro.new_user("Roberto", "flappy", 0, 0);
+    //Verifica se retorna a string com as informações dela quando a encontra
+    CHECK(registro.get_stats("Roberto") == "0 Roberto flappy 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Maria") == "15 Maria flappybird1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Carlos") == "24 Carlos flappybird 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
 }
 
 TEST_CASE("testing if return of get_player is correct"){
@@ -58,6 +65,9 @@ TEST_CASE("testing if return of get_player is correct"){
     CHECK(p.score == 24);
     CHECK(p.get_password() == "flappybird");
     CHECK(p.games == 2);
+    CHECK(p.jump_count == 0);
+    CHECK(p.ground_deaths == 0);
+    CHECK(p.pipe_deaths == 0);
 }
 
 TEST_CASE("update method is working correctly?"){
@@ -66,6 +76,7 @@ TEST_CASE("update method is working correctly?"){
     //Tentativa de atualizar um player inexistente
     p.username = "Sofia";
     p.score = 20;
+    p.jump_count = 3;
     registro.update(p);
     CHECK(registro.get_stats("Sofia") == "");
 
@@ -73,16 +84,31 @@ TEST_CASE("update method is working correctly?"){
     p = registro.get_player("Carlos");
     p.score = 30;
     p.achievements[1] = true;
+    p.jump_count = 11;
+    p.pipe_deaths++;
     registro.update(p);
-    CHECK(registro.get_stats("Carlos") == "30 Carlos flappybird 3 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Carlos") == "30 Carlos flappybird 3 11 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
 
     //Atualiza a jogadora Maria
     p = registro.get_player("Maria");
     p.score = 45;
     p.achievements[5] = true;
     p.achievements[12] = true;
+    p.ground_deaths++;
+    p.jump_count = 8;
     registro.update(p);
-    CHECK(registro.get_stats("Maria") == "45 Maria flappybird1 2 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0");
+    CHECK(registro.get_stats("Maria") == "45 Maria flappybird1 2 8 1 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0");
+
+    //Atualiza o jogador Roberto
+    p = registro.get_player("Roberto");
+    p.score = 41;
+    p.achievements[4] = true;
+    p.achievements[15] = true;
+    p.achievements[12] = true;
+    p.ground_deaths++;
+    p.jump_count = 41;
+    registro.update(p);
+    CHECK(registro.get_stats("Roberto") == "41 Roberto flappy 1 41 1 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 1");
 }
 
 TEST_CASE("delete_user method is working correctly?"){
@@ -92,7 +118,7 @@ TEST_CASE("delete_user method is working correctly?"){
     CHECK(registro.delete_user("Sofia") == 0);
 
     //Verifica se a captura da linha está sendo da forma correta
-    CHECK(registro.get_stats("Carlos") == "30 Carlos flappybird 3 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
+    CHECK(registro.get_stats("Carlos") == "30 Carlos flappybird 3 11 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0");
     CHECK(registro.delete_user("Carlos") == 1);
     CHECK(registro.get_stats("Carlos") == "");
 }
@@ -108,8 +134,8 @@ TEST_CASE("method of best player(get_max_user() e get_max_score())"){
 
     //Deleta Maria(O jogador com maior score deve ser o Carlos)
     registro.delete_user("Maria");
-    CHECK(registro.get_max_user() == "Luiz");
-    CHECK(registro.get_max_score() == 30);
+    CHECK(registro.get_max_user() == "Roberto");
+    CHECK(registro.get_max_score() == 41);
 
     //Adiciona um novo usuário com o maior score do jogo
     registro.new_user("Fabio", "flappybird3", 110, 21);
@@ -138,18 +164,26 @@ TEST_CASE("show all players registered sorting by score"){
     players = registro.get_all();
     auto it = players.begin();
     //Checa se o tamanho é igual a 3
-    CHECK(players.size() == 3);
+    CHECK(players.size() == 4);
     //Jogador da primeira posição
     CHECK(it->username == "Rodney");
     CHECK(it->score == 130);
     CHECK(it->games == 15);
     CHECK(it->get_password() == "flappybird4");
     it++;
+    //Jogador da segunda posição
     CHECK(it->username == "Fabio");
     CHECK(it->score == 110);
     CHECK(it->games == 21);
     CHECK(it->get_password() == "flappybird3");
     it++;
+    //Jogador da terceira posição
+    CHECK(it->username == "Roberto");
+    CHECK(it->score == 41);
+    CHECK(it->games == 1);
+    CHECK(it->get_password() == "flappy");
+    it++;
+    //Jogador da quarta posição
     CHECK(it->username == "Luiz");
     CHECK(it->score == 30);
     CHECK(it->games == 2);
@@ -158,6 +192,6 @@ TEST_CASE("show all players registered sorting by score"){
     registro.new_user("Héctor", "flappybird5", 72, 2);
     players.clear();
     players = registro.get_all();
-    CHECK(players.size() == 4);
+    CHECK(players.size() == 5);
 }  
 
